crates/htui/src/ui/snapshots/htui__ui__editor_pane__tests__the_focused_frame.snap
---
source: crates/htui/src/ui/editor_pane.rs
expression: text(&buffer)
---
 nvim · Ctrl+4 to htu…
hello red
中文X
❤️Y ｱﾞZ
