crates/htui/src/ui/snapshots/htui__ui__editor_pane__tests__the_unfocused_frame.snap
---
source: crates/htui/src/ui/editor_pane.rs
expression: text(&buffer)
---
 nvim · htui has the …
hello red
中文X
❤️Y ｱﾞZ
